// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Banner > renders 1`] = `
<div>
  <div
    class="banner relative w-full p-12 text-center rounded-lg bg-bluedot-lighter"
  >
    <h1
      class="banner__title text-bluedot-normal font-serif font-normal text-2xl"
    >
      Test Banner
    </h1>
    <form
      class="mt-6"
    />
  </div>
</div>
`;

exports[`Banner > renders with input and button 1`] = `
<div>
  <div
    class="banner relative w-full p-12 text-center rounded-lg bg-bluedot-lighter"
  >
    <h1
      class="banner__title text-bluedot-normal font-serif font-normal text-2xl"
    >
      Test Banner
    </h1>
    <form
      class="mt-6"
    >
      <input
        class="p-2 rounded border font-sans text-base font-normal text-center w-80"
        placeholder="you@example.com"
        type="text"
        value=""
      />
      <button
        class="ml-2 p-2 bg-bluedot-normal text-white font-bold rounded"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</div>
`;
